alignment fix

--- a/style.css
+++ b/style.css
@@ -1,18 +1,35 @@
+body {
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	background-color: #f5f7fa;
+}
+h1 {
+	text-align: center;
+}
+.container {
+	display: flex;
+	justify-content: center;
+}
 .base_currency {
 	padding: 12px 20px;
 	font-size: 1.2rem;
 	outline: none;
+	border-radius: 6px;
+	border: 1px solid rgb(121, 121, 121);
 }
 .submit {
 	padding: 12px 20px;
 	font-size: 1.2rem;
 	outline: none;
+	font-weight: 600;
+	background-color: #09ab2e;
+	color: #fff;
+	border-radius: 6px;
 }
-.display_container {
+/* .display_container {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
-}
+} */
 .rates {
 	font-size: 1.5rem;
 	padding: 12px 18px;
